--- a/modules/ROOT/pages/quickstart-connect.adoc
+++ b/modules/ROOT/pages/quickstart-connect.adoc
@@ -62,28 +62,28 @@ Now you can access your Neo4j instance under: \http://localhost:7474, log in wit
 Confirm that you can access the Confluent Control Center instance at http://localhost:9021/clusters and that the Cluster reports as healthy (this may take 90-120s).
 You should have one Broker, several Topics and one Connect cluster in the Control Center.
 
-=== Configure SOURCE instance
+=== Configure Source instance
 
 First up, we need to set up Neo4j as a source database that will provide messages for topics.
 Pick one of the following message serialization formats given below, save the content of the provided file into a local directory, named as `source.neo4j.json`.
 
 [.tabbed-example]
 ====
-[.include-with-AVRO-Messages]
+[.include-with-AVRO-messages]
 =====
 [source,json]
 ----
 include::ROOT:example$docker-data/contrib.source.avro.neo4j.json[]
 ----
 =====
-[.include-with-JSON-Messages-With-Schema]
+[.include-with-JSON-messages-with-schema]
 =====
 [source,json]
 ----
 include::ROOT:example$docker-data/contrib.source.json.neo4j.json[]
 ----
 =====
-[.include-with-JSON-Messages-As-String]
+[.include-with-JSON-messages-as-string]
 =====
 [source,json]
 ----
@@ -92,7 +92,7 @@ include::ROOT:example$docker-data/contrib.source.json-string.neo4j.json[]
 =====
 ====
 
-We will now create the SOURCE instance by invoking the the following REST call:
+We will now create the source instance by invoking the the following REST call:
 
 [source,shell]
 ----
@@ -102,8 +102,8 @@ curl -X POST http://localhost:8083/connectors \
   -d @source.neo4j.json
 ----
 
-This will create a Kafka Connect Source instance that will send messages over to the topic named `my-topic`, using your preferred serialization format.
-In Control Center, confirm that the Source connector has been created in the Connect tab, under connect-default.
+This will create a Kafka Connect source instance that will send messages over to the topic named `my-topic`, using your preferred serialization format.
+In Control Center, confirm that the source connector has been created in the Connect tab, under connect-default.
 
 The property `topic` defines where each message will be pushed, the message structure is defined by the `RETURN` cause of the Cypher statement in the `neo4j.source.query` property.
 So given the above configuration, the structure of the message will be the following (serialized as a your preferred serialization format):
@@ -113,7 +113,7 @@ So given the above configuration, the structure of the message will be the follo
 {"name": <name>, "surname": <surname>, "timestamp": <timestamp>}
 ----
 
-Now that you have a running SOURCE instance, you can create the following nodes in Neo4j:
+Now that you have a running source instance, you can create the following nodes in Neo4j:
 
 [source,cypher]
 ----
@@ -124,29 +124,29 @@ CREATE (:TestSource {name: 'jack', surname: 'small', timestamp: datetime().epoch
 
 which will result in there new messages being published into the `my-topic` topic.
 
-=== Configure SINK instance
+=== Configure Sink instance
 
-To get the messages created inside `my-topic` sinked back to the Neo4j database as nodes and relationships, we need to create a SINK instance, which will consume messages from `my-topic` topic and execute a defined Cypher statement for each of the consumed message.
+To get the messages created inside `my-topic` sinked back to the Neo4j database as nodes and relationships, we need to create a sink instance, which will consume messages from `my-topic` topic and execute a defined Cypher statement for each of the consumed message.
 
 First, save the following JSON file into a local directory named as `sink.neo4j.json`.
 
 [.tabbed-example]
 ====
-[.include-with-AVRO-Messages]
+[.include-with-AVRO-messages]
 =====
 [source,json]
 ----
 include::ROOT:example$docker-data/contrib.sink.avro.neo4j.json[]
 ----
 =====
-[.include-with-JSON-Messages-With-Schema]
+[.include-with-JSON-messages-with-schema]
 =====
 [source,json]
 ----
 include::ROOT:example$docker-data/contrib.sink.json.neo4j.json[]
 ----
 =====
-[.include-with-JSON-Messages-As-String]
+[.include-with-JSON-messages-as-string]
 =====
 [source,json]
 ----
@@ -155,7 +155,7 @@ include::ROOT:example$docker-data/contrib.sink.json-string.neo4j.json[]
 =====
 ====
 
-We will now create the SINK instance by invoking the following REST call:
+We will now create the sink instance by invoking the following REST call:
 
 [source,shell]
 ----
@@ -165,15 +165,15 @@ curl -X POST http://localhost:8083/connectors \
   -d @sink.neo4j.json
 ----
 
-This configures the SINK instance to consume data in your preferred serialization format.
-The property `neo4j.topic.cypher.my-topic` defines the Cypher query that will be executed per each message consumed by the SINK instance on the Kafka Connect side.
+This configures the sink instance to consume data in your preferred serialization format.
+The property `neo4j.topic.cypher.my-topic` defines the Cypher query that will be executed per each message consumed by the sink instance on the Kafka Connect side.
 
 === Testing It Out
 
-Now you can access your Confluent Control Center instance under: \http://localhost:9021/clusters, and check the created `my-topic` as specified in the connector configuration, as well as the Source and Sink connector instances are running under Connect, connect-default.
+Now you can access your Confluent Control Center instance under: \http://localhost:9021/clusters, and check the created `my-topic` as specified in the connector configuration, as well as the source and sink connector instances are running under Connect, connect-default.
 
-With both SOURCE and SINK connectors running, the previously created `:TestSource` nodes will result in messages being published into the `my-topic` topic by the Source instance.
-These messages will then be consumed by the SINK instance, and corresponding `:Person` and `:Family` nodes to be created inside Neo4j.
+With both source and sink connectors running, the previously created `:TestSource` nodes will result in messages being published into the `my-topic` topic by the source instance.
+These messages will then be consumed by the sink instance, and corresponding `:Person` and `:Family` nodes to be created inside Neo4j.
 
 Check that this is the case, by executing the following query in the Neo4j Browser at http://localhost:7474/browser/:
 
