--- a/modules/ROOT/partials/kafka-connect-cypher-strategy.adoc
+++ b/modules/ROOT/partials/kafka-connect-cypher-strategy.adoc
@@ -2,7 +2,7 @@
 
 [source,json]
 ----
-include::ROOT:example$docker-data/contrib.sink.string-json.neo4j.json[]
+include::ROOT:example$docker-data/contrib.sink.json-string.neo4j.json[]
 ----
 
 In particular this line:
@@ -47,10 +47,10 @@ Let's load the configuration into the Confluent Platform with this REST call:
 curl -X POST http://localhost:8083/connectors \
   -H 'Content-Type:application/json' \
   -H 'Accept:application/json' \
-  -d @contrib.sink.string-json.neo4j.json
+  -d @sink.string-json.neo4j.json
 ----
 
-The file `contrib.sink.string-json.neo4j.json` contains a configuration that manage a simple JSON producer example
+The file `sink.string-json.neo4j.json` contains a configuration that shows a sample JSON consumer configuration.
 
 Please check that everything is fine by going into:
 
