--- a/README.adoc
+++ b/README.adoc
@@ -31,3 +31,6 @@ To view the built site, launch a local server:
 1. `npm start`
 2. In a browser tab, go to `localhost:8000`
 
+== Publication process
+
+This repository is set up so that, when a PR is merged onto the `main` branch, the changes are automatically published on both https://neo4j.com/docs/kafka/ and https://development.neo4j.dev/docs/kafka/.
