--- a/modules/ROOT/pages/overview.adoc
+++ b/modules/ROOT/pages/overview.adoc
@@ -31,7 +31,7 @@ The Connect Worker can be used both to sink data to Neo4j and as a source to pub
 
 == Compatibility between Neo4j and {product-name}
 
-We recommend the latest version of {product-name} to be compatible with all the link:https://neo4j.com/developer/kb/neo4j-supported-versions/[supported versions] of Neo4j.
+We recommend using the latest version of {product-name} to be compatible with all the link:https://neo4j.com/developer/kb/neo4j-supported-versions/[supported versions] of Neo4j.
 
 == Support for {product-name}
 
