Apply suggestions from code review

--- a/modules/ROOT/pages/overview.adoc
+++ b/modules/ROOT/pages/overview.adoc
@@ -13,13 +13,11 @@ The Neo4j Connector for Apache Kafka and Neo4j Connector for Confluent are desig
 
 Both connectors can be used to sink data into Aura and Neo4j from Kafka Topics (ingest), or as a source of updates and new data (change data capture - CDC) for Kafka Topics to be consumed by other systems.
 
-The Neo4j Connector for Confluent runs as a **Kafka-Connect Plugin** on the Confluent Platform or deployed into the Confluent Cloud using their Custom Connectors. 
+The Neo4j Connector for Confluent runs as a **Kafka Connect Plugin** on the Confluent Platform and can be deployed into the Confluent Cloud using their Custom Connectors. 
 It is available from the link:https://www.confluent.io/hub/neo4j/kafka-connect-neo4j[Confluent Hub], or from the link:https://neo4j.com/download-center[Neo4j Download Center].
 
-The Neo4j Connector for Apache Kafka runs as a **Kafka-Connect Plugin** on Apache Kafka or deployed into Amazon Managed Streaming for Apache Kafka (Amazon MSK). 
+The Neo4j Connector for Apache Kafka runs as a **Kafka Connect Plugin** on Apache Kafka and can be deployed into Amazon Managed Streaming for Apache Kafka (Amazon MSK). 
 It is available from the link:https://neo4j.com/download-center[Neo4j Download Center].
-
-Both connectors support sinking data from Kafka Topics into Neo4j, or using Neo4j as a source for publishing data to Kafka Topics via Cypher queries.
 
 
 // [[kafka_connect_neo4j_connector_overview]]
