--- a/modules/ROOT/pages/confluent-cloud.adoc
+++ b/modules/ROOT/pages/confluent-cloud.adoc
@@ -4,6 +4,6 @@ Neo4j supports the Confluent Cloud with the Neo4j Connector for Confluent runnin
 Confluent's Custom Connectors provide a way to extend the Confluent Cloud beyond the fully managed connectors available on their platform.
 
 Custom Connectors are Kafka Connect plugins created by users, modified open-source connector plugins, or third-party connector plugins like the Neo4j Connector for Confluent. 
-Find out more about Custom Connectors link:https://docs.confluent.io/cloud/current/connectors/bring-your-connector/overview.html[here]. 
+Find out more about Custom Connectors in the link:https://docs.confluent.io/cloud/current/connectors/bring-your-connector/overview.html[Confluent documentation].
 
 Confluent Cloud does not provide the Neo4j Connector for Confluent as a managed connector, if you are interested in a managed connector please raise the request with Confluent.
